<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/userInputFormLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/edtAppId"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:hint="App Id"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtUserId"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:hint="User Id"
            android:layout_marginTop="15dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtToken"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:hint="Token"
            android:layout_marginTop="15dp"
            android:inputType="text" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/holo_orange_dark"
            android:text="Submit"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:gravity="center"
            />
    </LinearLayout>
</RelativeLayout>